🌒 Add dark mode & fix undefined browser language

--- a/style.css
+++ b/style.css
@@ -67,12 +67,13 @@ header {
 
 #footer {
   padding: 1em;
-  background: #500076;
-  opacity: 0.7;
+  background: rgba(80, 0, 118, 0.7);
+  display: flex;
+  align-items: center;
 }
 
 #footer:hover {
-  opacity: 1;
+  background: rgba(80, 0, 118, 1);
 }
 
 #footer p {
@@ -440,3 +441,84 @@ button.strong-disagree {
   0% {opacity: 0;}
   100% {opacity: 1;}
   }
+
+/* Dark theme button */
+
+.darkmode-btn {
+    position: relative;
+    width: 50px;
+    height: 25px;
+    margin: 0;
+    border-radius: 40px;
+    flex: 0 0 50px;
+}
+
+input[type="checkbox"] {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    margin: 0px;
+    cursor: pointer;
+    opacity: 0;
+    z-index: 2;
+}
+
+/* First toggle btn */
+.darkmode-btn span {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    overflow: hidden;
+    opacity: 1;
+    background-color: rgba(235, 235, 235, 0.8);
+    box-shadow: 0px 0px 5px #ebebeb;
+    border-radius: 40px;
+    transition: 0.2s ease background-color, 0.2s ease opacity;
+}
+
+.darkmode-btn span:before,.darkmode-btn span:after {
+    content: '';
+    position: absolute;
+    top: 1.5px;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    transition: 0.5s ease transform, 0.2s ease background-color;
+}
+
+.darkmode-btn span:before {
+    background-color: #ebebeb;
+    transform: translate(-20px,0px);
+    z-index: 1;
+}
+
+.darkmode-btn span:after {
+    background-color: #141414;
+    transform: translate(2.5px,0px);
+    z-index: 0;
+}
+
+.darkmode-btn input[type="checkbox"]:checked + span {
+    background-color: #141414;
+    box-shadow: 0px 0px 5px #141414;
+}
+
+.darkmode-btn input[type="checkbox"]:active + span {
+    opacity: 0.5;
+}
+
+.darkmode-btn input[type="checkbox"]:checked + span:before {
+    background-color: #141414;
+    transform: translate(19px,-4px);
+}
+
+.darkmode-btn input[type="checkbox"]:checked + span:after {
+    background-color: #ebebeb;
+    transform: translate(26px,0.5px);
+}
